--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>A-Frame Click & Drag Component - Basic</title>
-    <script src="../build.js"></script>
+    <script src="../main.js"></script>
   </head>
   <body>
     <a-scene>
